--- a/trig_vurazi.html
+++ b/trig_vurazi.html
@@ -1306,13 +1306,13 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
   <ul class="choices">
 
-    <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;&nbsp;\(\displaystyle \frac{1}{8} \)</span></li>
+    <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\(\displaystyle \frac{1}{8} \)</span></li>
 
-    <li><span class="choice-letter">Б.</span><span class="choice-text">&nbsp;&nbsp;\( 16 \)</span></li>
+    <li><span class="choice-letter">Б.</span><span class="choice-text">&nbsp;&nbsp;\&nbsp;( 16 \)</span></li>
 
-    <li><span class="choice-letter">В.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;\( 8 \)</span></li>
+    <li><span class="choice-letter">В.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\( 8 \)</span></li>
 
-    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">&nbsp;\(\displaystyle \frac{1}{16} \)</span></li>
+    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">&nbsp;&nbsp;\(\displaystyle \frac{1}{16} \)</span></li>
 
     <li><span class="choice-letter">Д.</span><span class="choice-text">&nbsp;\( -8 \)</span></li>
 
@@ -1397,15 +1397,15 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
   <ul class="choices">
 
-    <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;\( 0 \)</span></li>
+    <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\( 0 \)</span></li>
 
-    <li><span class="choice-letter">Б.</span><span class="choice-text">\(\displaystyle \frac{\sqrt{3}}{2} \)</span></li>
+    <li><span class="choice-letter">Б.</span><span class="choice-text">&nbsp;\(\displaystyle \frac{\sqrt{3}}{2} \)</span></li>
 
-    <li><span class="choice-letter">В.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\(\displaystyle \frac{1}{2} \)</span></li>
+    <li><span class="choice-letter">В.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;\(\displaystyle \frac{1}{2} \)</span></li>
 
-    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\(\displaystyle \frac{\sqrt{2}}{2} \)</span></li>
+    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">&nbsp;\(\displaystyle \frac{\sqrt{2}}{2} \)</span></li>
 
-    <li><span class="choice-letter">Д.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;\( 1 \)</span></li>
+    <li><span class="choice-letter">Д.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\( 1 \)</span></li>
 
 </ul>
   
@@ -1580,15 +1580,15 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
       
  <ul class="choices"> 
 
-    <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;&nbsp;\(-1\)</span></li>  
+    <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\(-1\)</span></li>  
 
     <li><span class="choice-letter">Б.</span><span class="choice-text">\(-0,5\)</span></li>  
 
-    <li><span class="choice-letter">В.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;\(0\)</span></li>  
+    <li><span class="choice-letter">В.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\(0\)</span></li>  
 
-    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">&nbsp;\(0,5\)</span></li>  
+    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">&nbsp;&nbsp;\(0,5\)</span></li>  
 
-    <li><span class="choice-letter">Д.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;\(1\)</span></li>  
+    <li><span class="choice-letter">Д.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\(1\)</span></li>  
 
   </ul>    <div class="answer-buttons">  
 
@@ -1681,11 +1681,11 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
   <p>15. Чому дорівнює \( \cos \alpha \), якщо \( \sin \alpha = -0,4 \) та \(\displaystyle \frac{3\pi}{2} < \alpha < 2\pi \)? </p>
 
   <ul class="choices">
-    <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;\( 0,6 \)</span></li>
-    <li><span class="choice-letter">Б.</span><span class="choice-text">&nbsp;&nbsp;\( \sqrt{0,84} \)</span></li>
-    <li><span class="choice-letter">В.</span><span class="choice-text">&nbsp;&nbsp;\( \sqrt{0,16} \)</span></li>
+    <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\( 0,6 \)</span></li>
+    <li><span class="choice-letter">Б.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\( \sqrt{0,84} \)</span></li>
+    <li><span class="choice-letter">В.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\( \sqrt{0,16} \)</span></li>
     <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\( -\sqrt{0,84} \)</span></li>
-    <li><span class="choice-letter">Д.</span><span class="choice-text">&nbsp;&nbsp;\(-0,6\)</span></li>
+    <li><span class="choice-letter">Д.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\(-0,6\)</span></li>
   </ul>
 
   <div class="answer-buttons">
@@ -1711,9 +1711,9 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
   <p>16. Чому дорівнює вираз \( 1 - \sin^2\beta - \cos^2\beta \) </p>
 
   <ul class="choices">
-    <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\( 0\)</span></li>
+    <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\( 0\)</span></li>
     <li><span class="choice-letter">Б.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;\( -2\)</span></li>
-    <li><span class="choice-letter">В.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\(1\)</span></li>
+    <li><span class="choice-letter">В.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\(1\)</span></li>
     <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">&nbsp;\( 2\cos^2\beta \)</span></li>
     <li><span class="choice-letter">Д.</span><span class="choice-text">\( 1 - \cos2\beta \)</span></li>
   </ul>
@@ -1741,10 +1741,10 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
   <p>17. Спростіть вираз \(\displaystyle \frac{\sin\frac{2\pi}{3}}{2\cos\frac{\pi}{3}} \)</p>
 
   <ul class="choices">
-    <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;&nbsp;\(\displaystyle \frac{1}{2}\)</span></li>
-    <li><span class="choice-letter">Б.</span><span class="choice-text">&nbsp;\(\displaystyle \frac{\sqrt{3}}{2}\)</span></li>
-    <li><span class="choice-letter">В.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;\(1\)</span></li>
-    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">&nbsp;\(\displaystyle -\frac{1}{2}\)</span></li>
+    <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;\(\displaystyle \frac{1}{2}\)</span></li>
+    <li><span class="choice-letter">Б.</span><span class="choice-text">&nbsp;&nbsp;\(\displaystyle \frac{\sqrt{3}}{2}\)</span></li>
+    <li><span class="choice-letter">В.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\(1\)</span></li>
+    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">&nbsp;&nbsp;\(\displaystyle -\frac{1}{2}\)</span></li>
     <li><span class="choice-letter">Д.</span><span class="choice-text">\(\displaystyle -\frac{\sqrt{3}}{2}\)</span></li>
   </ul>
 
@@ -1801,8 +1801,8 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
  <p>19. Укажіть найменьший додатний період функції \(y = 2\operatorname{ctg}(3x)\).</p>
 
   <ul class="choices">
-    <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;\(2\pi\)</span></li>
-    <li><span class="choice-letter">Б.</span><span class="choice-text">&nbsp;&nbsp;\(\pi\)</span></li>
+    <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;&nbsp;\(2\pi\)</span></li>
+    <li><span class="choice-letter">Б.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;\(\pi\)</span></li>
     <li><span class="choice-letter">В.</span><span class="choice-text">&nbsp;&nbsp;\(\displaystyle \frac{\pi}{3}\)</span></li>
     <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\(\displaystyle \frac{2\pi}{3}\)</span></li>
     <li><span class="choice-letter">Д.</span><span class="choice-text">&nbsp;\(\displaystyle \frac{\pi}{2}\)</span></li>
@@ -1831,11 +1831,11 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
   <p>20. Знайдіть значення виразу \(-2\sin75^\circ\cos75^\circ\).</p>
 
   <ul class="choices">
-    <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;&nbsp;\(\displaystyle \frac{\sqrt{3}}{2}\)</span></li>
-    <li><span class="choice-letter">Б.</span><span class="choice-text">&nbsp;\(\displaystyle \frac{1}{2}\)</span></li>
+    <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\(\displaystyle \frac{\sqrt{3}}{2}\)</span></li>
+    <li><span class="choice-letter">Б.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\(\displaystyle \frac{1}{2}\)</span></li>
     <li><span class="choice-letter">В.</span><span class="choice-text">\(\displaystyle -\frac{\sqrt{3}}{2}\)</span></li>
-    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\(\displaystyle -\frac{1}{2}\)</span></li>
-    <li><span class="choice-letter">Д.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;\(1\)</span></li>
+    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">&nbsp;\(\displaystyle -\frac{1}{2}\)</span></li>
+    <li><span class="choice-letter">Д.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\(1\)</span></li>
   </ul>
 
   <div class="answer-buttons">
