--- a/trig_vurazi.html
+++ b/trig_vurazi.html
@@ -1308,8 +1308,8 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
     <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\(\displaystyle \frac{1}{8} \)</span></li>
 
-    <li><span class="choice-letter">Б.</span><span class="choice-text">&nbsp;&nbsp;\&nbsp;( 16 \)</span></li>
-
+    <li><span class="choice-letter">Б.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\( 16 \)</span></li>
+\
     <li><span class="choice-letter">В.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\( 8 \)</span></li>
 
     <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">&nbsp;&nbsp;\(\displaystyle \frac{1}{16} \)</span></li>
@@ -1584,11 +1584,11 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
     <li><span class="choice-letter">Б.</span><span class="choice-text">\(-0,5\)</span></li>  
 
-    <li><span class="choice-letter">В.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\(0\)</span></li>  
+    <li><span class="choice-letter">В.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\(0\)</span></li>  
 
-    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">&nbsp;&nbsp;\(0,5\)</span></li>  
+    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\(0,5\)</span></li>  
 
-    <li><span class="choice-letter">Д.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\(1\)</span></li>  
+    <li><span class="choice-letter">Д.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\(1\)</span></li>  
 
   </ul>    <div class="answer-buttons">  
 
@@ -1832,7 +1832,7 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
   <ul class="choices">
     <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\(\displaystyle \frac{\sqrt{3}}{2}\)</span></li>
-    <li><span class="choice-letter">Б.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\(\displaystyle \frac{1}{2}\)</span></li>
+    <li><span class="choice-letter">Б.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;\(\displaystyle \frac{1}{2}\)</span></li>
     <li><span class="choice-letter">В.</span><span class="choice-text">\(\displaystyle -\frac{\sqrt{3}}{2}\)</span></li>
     <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">&nbsp;\(\displaystyle -\frac{1}{2}\)</span></li>
     <li><span class="choice-letter">Д.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\(1\)</span></li>
@@ -2168,7 +2168,7 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
   
   <!-- Задание 26 -->
 <div class="question" id="q26">
-  <p><strong>26. Обчисліть \(\displaystyle \cos\beta\), якщо \(\sin\beta = 0,8, \frac{\pi}{2} < \beta < \pi\).</strong></p>
+  <p><strong>26. Обчисліть \(\displaystyle \cos\beta\), якщо \(\sin\beta = 0,8; \frac{\pi}{2} < \beta < \pi\).</strong></p>
     
     <input type="text" class="open-answer" name="q26" data-correct="18"
 
