--- a/trig_vurazi.html
+++ b/trig_vurazi.html
@@ -1077,10 +1077,10 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
   <!-- Варианты ответа -->
 
     <ul>
-  <li><span class="choice-letter">А.</span> &nbsp;&nbsp;&nbsp;&nbsp;\( \cos\alpha \)</li>
-  <li><span class="choice-letter">Б.</span> &nbsp;&nbsp;&nbsp;&nbsp;\( \sin \alpha \)</li>
+  <li><span class="choice-letter">А.</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\( \cos\alpha \)</li>
+  <li><span class="choice-letter">Б.</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\( \sin \alpha \)</li>
   <li><span class="choice-letter">В.</span> &nbsp;\( -\cos \alpha \)</li>
-  <li><span class="choice-letter">Г.&nbsp;</span>&nbsp;&nbsp;&nbsp;&nbsp;\(1\)</li>
+  <li><span class="choice-letter">Г.&nbsp;</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\(1\)</li>
   <li><span class="choice-letter">Д.</span>&nbsp; \( -\sin \alpha \)</li>
 </ul>
   
@@ -1122,7 +1122,7 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
   <li><span class="choice-letter">А.</span><span class="choice-text">\(\cos 2\alpha\)</span></li>
 
-  <li> <span class="choice-letter">Б.</span><span class="choice-text"> \( \operatorname{tg}^2 \alpha \)</span></li>
+  <li> <span class="choice-letter">Б.</span><span class="choice-text"> &nbsp;&nbsp;\( \operatorname{tg}^2 \alpha \)</span></li>
 
   <li><span class="choice-letter">В.</span><span class="choice-text"> &nbsp;&nbsp;&nbsp;\(1\)</span></li>
 
@@ -1309,8 +1309,8 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
     <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\(\displaystyle \frac{1}{8} \)</span></li>
 
     <li><span class="choice-letter">Б.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\( 16 \)</span></li>
-\
-    <li><span class="choice-letter">В.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\( 8 \)</span></li>
+
+    <li><span class="choice-letter">В.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;\( 8 \)</span></li>
 
     <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">&nbsp;&nbsp;\(\displaystyle \frac{1}{16} \)</span></li>
 
@@ -1681,11 +1681,11 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
   <p>15. Чому дорівнює \( \cos \alpha \), якщо \( \sin \alpha = -0,4 \) та \(\displaystyle \frac{3\pi}{2} < \alpha < 2\pi \)? </p>
 
   <ul class="choices">
-    <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\( 0,6 \)</span></li>
+    <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\( 0,6 \)</span></li>
     <li><span class="choice-letter">Б.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\( \sqrt{0,84} \)</span></li>
     <li><span class="choice-letter">В.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\( \sqrt{0,16} \)</span></li>
     <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\( -\sqrt{0,84} \)</span></li>
-    <li><span class="choice-letter">Д.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\(-0,6\)</span></li>
+    <li><span class="choice-letter">Д.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\(-0,6\)</span></li>
   </ul>
 
   <div class="answer-buttons">
@@ -1712,7 +1712,7 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
   <ul class="choices">
     <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\( 0\)</span></li>
-    <li><span class="choice-letter">Б.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;\( -2\)</span></li>
+    <li><span class="choice-letter">Б.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\( -2\)</span></li>
     <li><span class="choice-letter">В.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\(1\)</span></li>
     <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">&nbsp;\( 2\cos^2\beta \)</span></li>
     <li><span class="choice-letter">Д.</span><span class="choice-text">\( 1 - \cos2\beta \)</span></li>
@@ -1801,11 +1801,11 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
  <p>19. Укажіть найменьший додатний період функції \(y = 2\operatorname{ctg}(3x)\).</p>
 
   <ul class="choices">
-    <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;&nbsp;\(2\pi\)</span></li>
+    <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\(2\pi\)</span></li>
     <li><span class="choice-letter">Б.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;\(\pi\)</span></li>
-    <li><span class="choice-letter">В.</span><span class="choice-text">&nbsp;&nbsp;\(\displaystyle \frac{\pi}{3}\)</span></li>
-    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\(\displaystyle \frac{2\pi}{3}\)</span></li>
-    <li><span class="choice-letter">Д.</span><span class="choice-text">&nbsp;\(\displaystyle \frac{\pi}{2}\)</span></li>
+    <li><span class="choice-letter">В.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\(\displaystyle \frac{\pi}{3}\)</span></li>
+    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">&nbsp;\(\displaystyle \frac{2\pi}{3}\)</span></li>
+    <li><span class="choice-letter">Д.</span><span class="choice-text">&nbsp;&nbsp;\(\displaystyle \frac{\pi}{2}\)</span></li>
   </ul>
 
   <div class="answer-buttons">
@@ -1832,9 +1832,9 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
   <ul class="choices">
     <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\(\displaystyle \frac{\sqrt{3}}{2}\)</span></li>
-    <li><span class="choice-letter">Б.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;\(\displaystyle \frac{1}{2}\)</span></li>
+    <li><span class="choice-letter">Б.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\(\displaystyle \frac{1}{2}\)</span></li>
     <li><span class="choice-letter">В.</span><span class="choice-text">\(\displaystyle -\frac{\sqrt{3}}{2}\)</span></li>
-    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">&nbsp;\(\displaystyle -\frac{1}{2}\)</span></li>
+    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">&nbsp;&nbsp;\(\displaystyle -\frac{1}{2}\)</span></li>
     <li><span class="choice-letter">Д.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\(1\)</span></li>
   </ul>
 
@@ -1870,11 +1870,11 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
     <div class="right-column">
       <h4>Тотожні вирази</h4>
-      <p>А. \(\cos^2\alpha\)</p>
-      <p>Б. \(\cos2\alpha\)</p>
-      <p>В. \(\sin2\alpha\)</p>
-      <p>Г. \(-\cos2\alpha\)</p>
-      <p>Д. \(\sin^2\alpha\)</p>
+      <p>А. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\(\cos^2\alpha\)</p>
+      <p>Б. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\(\cos2\alpha\)</p>
+      <p>В. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\(\sin2\alpha\)</p>
+      <p>Г. &nbsp;&nbsp;\(-\cos2\alpha\)</p>
+      <p>Д. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\(\sin^2\alpha\)</p>
     </div>
   </div>
 
@@ -1932,11 +1932,11 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
     <div class="right-column">
       <h4>Тотожні вирази</h4>
-      <p>А. &nbsp;&nbsp;&nbsp;\(\sin60^\circ\)</p>
-      <p>Б. &nbsp;&nbsp;&nbsp;\(\cos60^\circ\)</p>
-      <p>В. \(-\sin60^\circ\)</p>
-      <p>Г. &nbsp;&nbsp;&nbsp;&nbsp;\(\sin30^\circ\)</p>
-      <p>Д. \(-\cos60^\circ\)</p>
+      <p>А. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\(\sin60^\circ\)</p>
+      <p>Б. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\(\cos60^\circ\)</p>
+      <p>В. &nbsp;&nbsp;\(-\sin60^\circ\)</p>
+      <p>Г. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\(\sin30^\circ\)</p>
+      <p>Д. &nbsp;&nbsp;\(-\cos60^\circ\)</p>
     </div>
   </div>
 
@@ -1994,11 +1994,11 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
     <div class="right-column">
       <h4>Значення</h4>
-      <p>А. \(\displaystyle -\frac{\sqrt2}{2}\)</p>
-      <p>Б. &nbsp;&nbsp;&nbsp;\(\displaystyle \frac{1}{2}\)</p>
-      <p>В. \(\displaystyle -\frac{1}{2}\)</p>
-      <p>Г. &nbsp;&nbsp;&nbsp;\(\displaystyle \frac{\sqrt2}{2}\)</p>
-      <p>Д. \(-1\)</p>
+      <p>А.&nbsp; \(\displaystyle -\frac{\sqrt2}{2}\)</p>
+      <p>Б. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\(\displaystyle \frac{1}{2}\)</p>
+      <p>В. &nbsp;&nbsp;&nbsp;\(\displaystyle -\frac{1}{2}\)</p>
+      <p>Г. &nbsp;&nbsp;&nbsp;&nbsp;\(\displaystyle \frac{\sqrt2}{2}\)</p>
+      <p>Д. &nbsp;&nbsp;&nbsp;&nbsp;\(-1\)</p>
     </div>
   </div>
 
@@ -2055,11 +2055,11 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
     <div class="right-column">
       <h4>Значення</h4>
-      <p>А. &nbsp;\(\displaystyle \frac{\sqrt{3}}{2}\)</p>
-      <p>Б. &nbsp;&nbsp;&nbsp;\(\displaystyle \frac{1}{2}\)</p>
-      <p>В. \(\displaystyle -\frac{1}{2}\)</p>
-      <p>Г. &nbsp;&nbsp;\(\displaystyle \frac{1}{\sqrt{3}}\)</p>
-      <p>Д. \(\sqrt{3}\)</p>
+      <p>А. &nbsp;&nbsp;\(\displaystyle \frac{\sqrt{3}}{2}\)</p>
+      <p>Б. &nbsp;&nbsp;&nbsp;&nbsp;\(\displaystyle \frac{1}{2}\)</p>
+      <p>В. &nbsp;\(\displaystyle -\frac{1}{2}\)</p>
+      <p>Г. &nbsp;&nbsp;&nbsp;\(\displaystyle \frac{1}{\sqrt{3}}\)</p>
+      <p>Д. &nbsp;&nbsp;&nbsp;\(\sqrt{3}\)</p>
     </div>
   </div>
 
@@ -2119,10 +2119,10 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
     <div class="right-column">
       <h4>Значення</h4>
       <p>А. &nbsp;&nbsp;&nbsp;\(3 - 2\sin^2\alpha\)</p>
-      <p>Б. &nbsp;\(-3 - \sin^2\alpha\)</p>
+      <p>Б. &nbsp;&nbsp;&nbsp;\(-3 - \sin^2\alpha\)</p>
       <p>В. &nbsp;&nbsp;&nbsp;\(3 + 2\sin^2\alpha\)</p>
-      <p>Г. &nbsp;&nbsp;&nbsp;\(3 - \sin^2\alpha\)</p>
-      <p>Д. &nbsp;&nbsp;&nbsp;\(3 + \sin^2\alpha\)</p>
+      <p>Г. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\(3 - \sin^2\alpha\)</p>
+      <p>Д. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\(3 + \sin^2\alpha\)</p>
     </div>
   </div>
 
